--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
+
   <header></header>
 
   <section>
     <div class="first-container">
       <h1>I'm Abdallah</h1>
-      <p class="head">a Programer</p>
+      <h2 style="font-size: 18px; margin: 0;">a Programer and architect</h2>
       <img class="img-mountain" src="images/1.png" alt="">
+      <a class="freepik" href="https://www.freepik.com/?awc=18676_1592623501_91bd5d613d38f38e9b509116dae670b1">Image by freepik</a>
     </div>
-    <a class="freepik" href="https://www.freepik.com/?awc=18676_1592623501_91bd5d613d38f38e9b509116dae670b1">Image by freepik</a>
   </section>
 
-  <hr class="dotted">
 
   <div class="middle-container">
 
     <div class="profile">
-      <img class="profile-image" src="images/myphoto_01.png" alt="my profile image">
-      <h2>Hello</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <img class="profile-image" src="images/myphoto_00.png" alt="my profile image">
+        <h2>Hello</h2>
+        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
 
     <hr class="dotted">
@@ -38,13 +38,15 @@
       <h2>My Skills.</h2>
 
       <div class="skill-row">
-        <img class="" src="" alt="">
+        <img class="code-image" src="images/programer.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
 
+      <hr class="dotted clear">
+
       <div class="skill-row">
-        <img class="" src="" alt="">
+        <img class="arch-image" src="images/architect.png" alt="">
         <h3>Lorem Ipsum Dolor</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
@@ -57,17 +59,15 @@
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="abab231196@gemail.com">CONTACT ME</a>
+      <a class="BUTTON_HEE" href="abab231196@gemail.com">CONTACT ME</a>
     </div </div>
 
   </div>
 
-  <hr class="dotted">
-
   <footer>
     <a class="footer-link" href="https://www.linkedin.com/in/abdallah-bakr-362a08118/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/abd.bakr.50">Facebook</a>
-    <p>© 2020 Abdallah Bakr.</p>
+    <p class="copy-right">© 2020 Abdallah Bakr.</p>
   </footer>
 
 
